# raiders-analysis-2026

./: .gitignore  CLAUDE_CLI_HANDOFF.md  CLAUDE_CLI_HANDOFF_2.md  CLAUDE_CLI_HANDOFF_3.md  CLAUDE_CLI_HANDOFF_4.md  CLAUDE_CLI_HANDOFF_5.md  README.md  pyproject.toml
app/: streamlit_app.py  utils.py
app/pages/: 1_Player_Detail.py  2_Position_Comparison.py  3_Methodology.py  4_About.py
data/processed/: offense_summary.csv  physical_archetypes.csv  physical_offense_summary.csv  player_combine.csv  position_archetypes.csv  roster_grades.csv  scheme_profile.csv
data/raw/: scheme_experience.csv
scripts/: export_app_data.py  validate.py
src/: archetype.py  data_ingestion.py  ota_roster_patch.py  roster.py  scoring.py
