[project]
name = "raiders-analysis-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "nfl-data-py>=0.3.2",
    "nflreadpy>=0.1.5",
    "pandas>=2.0",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
